--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
@@ -1,149 +1,155 @@
-<div
-  class="container"
-  style="background-image: url('assets/images/net-rd-2-1.jpg')"
->
-  <form [formGroup]="addproductForm">
-    <div
-      class="register-header block justify-content-center align-content-center align-items-center text-2xl w-full"
-      style="background: transparent"
-    >
-      <h2>Ürün ekle</h2>
+<form [formGroup]="addproductForm">
+  <div class="mb-1 block w-full">
+    <h4>Ürün ekle</h4>
+  </div>
+  <!-- Code input start-->
+  <div class="wrapper">
+    <div class="flex-auto mt-4">
+      <label class="mb-2 block" for="code">Product Code</label>
+      <p-inputNumber
+        formControlName="code"
+        [showButtons]="false"
+        inputId="code"
+        mode="decimal"
+        class="w-full"
+      >
+      </p-inputNumber>
     </div>
-    <!-- Code input start-->
+  </div>
+  <!-- Code input end-->
 
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-id-card" style="color: #000"></i>
-        <input
-          pInputText
-          id="code"
-          formControlName="code"
-        />
-        <label htmlFor="code"> Code </label>
-      </span>
+  <!-- Name input start-->
+  <div class="wrapper">
+    <div class="flex-auto mt-4">
+      <label htmlFor="name" class="mb-2 block">Name</label>
+      <input
+        pInputText
+        id="name"
+        aria-describedby="name"
+        formControlName="name"
+        class="w-full"
+      />
     </div>
-    <!-- Code input end-->
-
-    <!-- Name input start-->
-
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-user" style="color: #000"></i>
-        <input
-          pInputText
-          id="name"
-          formControlName="name"
-        />
-        <label htmlFor="name"> Name </label>
-      </span>
+  </div>
+  <!-- Name input end-->
+  <!-- Quantitiy input start-->
+  <div class="wrapper">
+    <div class="flex-auto mt-4">
+      <label class="mb-2 block" for="quantity">Quantity</label>
+      <p-inputNumber
+        formControlName="quantity"
+        [showButtons]="false"
+        inputId="quantity"
+        mode="decimal"
+        class="w-full"
+      >
+      </p-inputNumber>
     </div>
-    <!-- Name input end-->
+  </div>
+  <!-- Quantitiy input end-->
 
-    <!-- Image input start-->
-    <div class="wrapper">
-    <span class="p-float-label">
-      <div class="w-full px-6 mt-4 py-1 bg-white border-round">
-        <p-fileUpload
-        mode="basic"
-        name="demo[]"
-        id="image"
-        url="https://www.primefaces.org/cdn/api/upload.php"
-        accept="image/*"
-        [maxFileSize]="1000000"
-        (onUpload)="onBasicUploadAuto($any($event))"
-        [auto]="true"
-        chooseLabel="Resim">
-        </p-fileUpload>
-       </div>
+  <!-- Price input start-->
+  <div class="wrapper">
+    <div class="flex-auto mt-4">
+      <label class="mb-2 block" for="priceStacked">Price</label>
+      <p-inputNumber
+        formControlName="priceStacked"
+        [showButtons]="false"
+        inputId="priceStacked"
+        mode="currency"
+        currency="USD"
+        class="w-full"
+      >
+      </p-inputNumber>
+    </div>
+  </div>
+  <!-- Price input end-->
+
+  <!-- Image input start-->
+  <div class="wrapper block w-full">
+    <div class="flex-auto mt-4">
+      <label htmlFor="file" class="mb-2 block">File</label>
+      <input
+        type="file"
+        pInputText
+        id="file"
+        formControlName="file"
+        class="custom-file-input"
+      />
+    </div>
+  </div>
+  <!-- Image input end-->
+
+  <!-- category  input start-->
+  <div class="wrapper block w-full">
+    <div class="flex-auto mt-4">
+      <label htmlFor="category" class="mb-2 block">Category</label>
+      <p-dropdown
+        id="category"
+        formControlName="category"
+        [options]="categorys"
+        optionLabel="name"
+        class="w-full"
+      ></p-dropdown>
+    </div>
+  </div>
+  <!-- category  input end-->
+
+  <!-- InventoryStatus input start-->
+  <div class="wrapper mt-4 flex flex-column">
+    <div>
+      <label htmlFor="selectedStatus" class="mb-2 block w-full">Status</label>
+    </div>
+    <div class="flex  flex-row">
+      <div *ngFor="let status of inventoryStatus" class="field-checkbox">
+        <p-radioButton
+          [inputId]="status.key"
+          [value]="status"
+          formControlName="selectedStatus"
+          class="flex flex-row ml-2"
+        ></p-radioButton>
+        <label [for]="status.key" class="ml-2">{{ status.name }}</label>
+      </div>
+    </div>
+  </div>
+  <!-- InventoryStatus input end-->
+
+  <!-- rating  input start-->
+  <div class="wrapper block w-full">
+    <div class="flex-auto mt-4">
+      <div class="flex flex-column justify-content-center border-round">
+        <label for="valueRating" class="mb-2 block">Rating</label>
+        <p-dropdown
+          [options]="items"
+          formControlName="valueRating"
+          placeholder="Select rating point"
+          [virtualScroll]="true"
+          [virtualScrollItemSize]="38"
+        ></p-dropdown>
+      </div>
+    </div>
+  </div>
+  <!-- rating  input end-->
+  <!-- desc  input start-->
+  <div class="wrapper mt-4 block">
+    <span class="p-float-label mt-2">
+      <textarea
+        id="float-input"
+        rows="10"
+        cols="70"
+        class="p-3 w-full"
+        formControlName="description"
+        pInputTextarea
+      ></textarea>
+      <label for="float-input">Description</label>
     </span>
-    </div>
-    <!-- Image input end-->
-
-    <!-- Price input start-->
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-dollar" style="color: #000"></i>
-        <input
-          pInputText
-          id="price"
-          formControlName="price"
-        />
-        <label htmlFor="price">Price</label>
-      </span>
-    </div>
-    <!-- Price input end-->
-
-    <!-- Quantitiy input start-->
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-slack" style="color: #000"></i>
-        <input
-          pInputText
-          id="quantity"
-          formControlName="quantity"
-        />
-        <label htmlFor="quantity">Quantitiy</label>
-      </span>
-    </div>
-    <!-- Quantitiy input end-->
-
-    <!-- InventoryStatus input start-->
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-check-circle" style="color: #000"></i>
-        <input
-          pInputText
-          id="inventoryStatus"
-          formControlName="inventoryStatus"
-        />
-        <label htmlFor="inventoryStatus">Status</label>
-      </span>
-    </div>
-    <!-- InventoryStatus input end-->
-
-    <!-- category  input start-->
-    <div class="wrapper">
-      <span class="p-float-label mt-4">
-        <i class="pi pi-database" style="color: #000"></i>
-        <input
-          pInputText
-          id="category"
-          formControlName="category"
-        />
-        <label htmlFor="category">category</label>
-      </span>
-    </div>
-    <!-- category  input end-->
-    <!-- rating  input start-->
-    <div class="wrapper">
-      <label for="valueRating">Rating</label>
-      <span class="p-float-label mt-2">
-        <div
-          class="flex flex-column justify-content-center bg-white py-2 border-round"
-        >
-          <i class="pi pi-star-fill" style="color: #000"></i>
-          <p-rating
-            id="valueRating"
-            formControlName="valueRating"
-            [cancel]="false"
-            class="w-full mx-6 py-1"
-          ></p-rating>
-        </div>
-      </span>
-    </div>
-    <!-- rating  input end-->
-     <!-- desc  input start-->
-     <div class="wrapper block ">
-      <span class="p-float-label mt-2">
-        <textarea id="float-input" rows="10" cols="70" class="p-3 " pInputTextarea></textarea>
-        <label for="float-input">Description</label>
-      </span>
-    </div>
-    <!-- rating  input end-->
-    <!-- button start-->
+  </div>
+  <!-- rating  input end-->
+  <!-- button start-->
+  <div class="wrapper w-full justify-content-center">
     <span class="button-style mt-4">
-      <button class="button w-12rem"  >ekle</button>
+      <button class="button w-12rem" (click)="onSubmit()">ekle</button>
     </span>
-    <!-- button end-->
-  </form>
-</div>
+  </div>
+  <!-- button end-->
+</form>
