--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
@@ -1,47 +1,27 @@
-
-.container {
-  width: 100%;
-  min-height: 75vh;
-  padding: 15px;
+form{
   display: flex;
-  background: transparent;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(8px);
-}
-
-.container form {
-  display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  padding: 20px;
-  width: 650px;
-  height: auto;
-  backdrop-filter: blur(8px);
-  margin: 15px;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
-  border-radius: 20px;
-  align-items: center;
+}
+.wrapper{
+  display: flex;
+  margin: auto 30px auto 30px;
+  float: left;
+}
+.custom-file-input {
+  width: 100%;
+  padding: 1rem;
+  border: 1px solid #e0e0e0;
+  border-radius: 0.25rem;
+  margin: 0.5rem 0;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  color: #333;
+  font-size: 1rem;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.register-header h2{
-  margin-left: 150px;
-}
-.container form .wrapper{
-  margin: 15px;
-}
-a {
-  text-decoration: underline;
+.custom-file-input:hover {
+  background-color: #e0e0e0;
   color: #000;
 }
-
-a:hover{
-  color:#176b87;
-}
-
 
